--- a/css/manichino.css
+++ b/css/manichino.css
@@ -168,6 +168,11 @@
 	background-position:3px center;
 	background-size:22px auto;
 }
+.smart #context_menu div{
+	font-size: var(--font-14-94) !important;
+    line-height: 32px !important;
+	padding-right: 15px !important;
+}
 #context_menu div:hover{
 	background-color:rgba(0,0,0,0.1);
 }
@@ -204,12 +209,19 @@
 	padding-left:5px;
 	padding-right:5px;
 }
+.smart #legende div{
+	font-size: var(--font-12-1) !important;
+    height: 30px !important;
+    line-height: 30px !important;
+    padding-right: 34px !important;
+    padding-left: 15px !important;
+}
 #legende div:not(.noFr){
 	width:calc(fit-content + 30px) !important;
 	background-color:rgba(0,0,0,0.7);
 	border-radius:10px;
-	padding-left:10px !important;
-	padding-right:20px !important;
+	padding-left:10px/*  !important */;
+	padding-right:20px/*  !important */;
 	background-image:url(../img/frGiu.png);
 	background-repeat:no-repeat;
 	background-position:right center;
