--- a/css/menu.css
+++ b/css/menu.css
@@ -1343,6 +1343,23 @@ body:not(.smart) #sliderAnatomia .slider{
     height: 36px;
 	margin-left: -11px;
 }
+.smart #ttAnatomia{
+	display:none;
+	position:fixed;
+	z-index:10;
+	left:55px;
+	top:-500px;
+	width:70px;
+	height:40px;
+	margin-left:41px;
+	margin-top:-43px;
+	line-height:40px;
+	text-align:center;
+	background: rgba(255,255,255,0.7);
+	color:#000;
+	font-size: var(--font-16-29) !important;
+	border-radius:8px;
+}
 
 
 /* 3 - IMPOSTAZIONI */
