--- a/css/menu.css
+++ b/css/menu.css
@@ -96,6 +96,9 @@ body:not(.smart) #icone.iconeEspanse{
 	background-position:center center;
 	cursor:pointer;
 }
+.smart #contBtnModello.nas{
+	display:none !important;
+}
 .bodyStampa #contBtnModello{
 	display:none !important;
 }
