--- a/css/menu.css
+++ b/css/menu.css
@@ -82,8 +82,12 @@ body:not(.smart) #icone.iconeEspanse{
 }
 .smart #icone div svg{
 	transform: rotate(-90deg);
-    margin-left: 21px !important;
+    margin-left: 29px !important;
     margin-top: -25px;
+}
+.smart #icone div#p_set svg,
+.smart #icone div#p_sets svg{
+    margin-left: 46px !important;
 }
 #icone div:not(#btns_set):not(#cartella_set){
 	background-repeat:no-repeat;
@@ -103,11 +107,18 @@ body:not(.smart) #icone.iconeEspanse{
 	display:none !important;
 }
 .smart #icone div:not(#btns_set):not(#cartella_set){
-	width: 64px;
+	width: 70px;
     height: 64px;
     float: left;
     margin: 0px;
-    background-position: center center;
+    background-position: center -1px;
+}
+.smart #icone #p_ricerca{
+    background-position: center 4px !important;
+}
+.smart #icone #p_set{
+    background-position: center 5px !important;
+	border-left:none !important;
 }
 .smart #icone:not(.iconeHome) div:not(#btns_set):not(#cartella_set){
     margin-top: 7px;
@@ -183,8 +194,9 @@ body:not(.smart) #contBtnModello > div{
 	vertical-align:top;
 }
 .smart #contBtnModello{
-    width: 54px;
+	width: 56px;
     top: 0px;
+    padding-right: 2px;
 }
 body:not(.smart) #contBtnModello:hover{
 	 background-color: rgba(0,0,0,0.25) !important;
@@ -218,8 +230,22 @@ body:not(.smart) #icone.iconeTrans div:not(#btns_set):not(#cartella_set){
 	transition: width 0.3s, background-color 0.3s;
 	-webkit-transition: width 0.3s, background-color 0.3s;
 }
-.smart #icone div i{
+.smart #icone:not(.labeled) div i{
 	display:none;
+}
+.smart #icone.labeled div i{
+	/* display:none; */
+	display: block;
+    font-style: normal;
+    color: #FFF;
+    position: absolute;
+    bottom: 3px;
+    width: 68px;
+    text-align: center;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding: 0 3px;
 }
 .smart #icone.iconeHome div:not(#btns_set):not(#cartella_set) i{
 	display:block !important;
@@ -272,6 +298,13 @@ body:not(.smart) #icone.iconeEspanse div i{
 	background-image:url(../img/ico_mappaB.png);
 	display:none;
 }
+.smart #p_sets{
+	border-left:none !important;
+	width:100px !important;
+}
+.smart #p_sets i{
+	width:98px !important;
+}
 #p_set,
 #p_set:hover{
 	background-color: #1546a1 !important;
@@ -279,6 +312,10 @@ body:not(.smart) #icone.iconeEspanse div i{
 .smart #p_set{
 	margin-top: 0px !important;
     height: 64px !important;
+	width: 100px !important;
+}
+.smart #p_set i{
+	width: 98px !important;
 }
 body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_sets{
 	background-image: url(../img/ico_mappa.png);
@@ -327,6 +364,9 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_sets{
 #p_modello{
 	margin-top:5px;
 }
+.smart #p_modello{
+	display:none !important;
+}
 .smart.nasSch #p_modello{
 	display:none;
 }
@@ -365,13 +405,29 @@ body:not(.smart) #p_rifletti{
 	display:none;
 	opacity:0.2;
 }
+.smart #contBtnModello #p_centro:not(.centroAtt){
+	left:-1000px !important;
+}
 .smart #contBtnModello #p_centro{
 	position: fixed;
-    top: 3px;
+    top: 119px;
     left: 3px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 6px;
+	background-position: center 2px !important;
 }
+body:not(.smart) #p_centro i{
+	display:none;
+}
+#p_centro i{
+	color: #FFF;
+    font-style: normal;
+    font-size: 11px;
+    display: inline-block;
+    margin-top: 32px;
+}
+
+
 .smart #contBtnModello/* .vis */{
 	margin-top: 170px;
     background-color: rgba(0, 0, 0, 0.2);
@@ -820,6 +876,9 @@ body:not(.smart) #labelModello{
     margin-top: 18px !important;
     margin-left: -32px !important;
     border-top-left-radius: 6px;
+}
+.smart #scarica_modello{
+	display:none !important;
 }
 .smart.android #scarica_modello{
     margin-top: 21px !important;
