--- a/css/ricerche.css
+++ b/css/ricerche.css
@@ -10,16 +10,17 @@
     margin-left: -10px;
     margin-right: -7px;
     margin-top: -3px;
-	padding-left:10px;
 }
 body:not(.smart) #parolaGlobal{
     height: 36px !important;
     line-height: 36px !important;
+	padding-left:10px;
 }
 .smart #parolaGlobal{
-	height: 40px !important;
-	line-height: 34px !important;
+	height: 50px !important;
+	line-height: 44px !important;
 	width: calc(100% - 80px) !important;
+	padding-left:16px;
 }
 body:not(.smart) #parolaGlobal::-webkit-input-placeholder{
 	font-weight:normal !important;
@@ -55,8 +56,8 @@ body:not(.smart) #parolaGlobal::-webkit-input-placeholder{
     background-color: #1b4ca8 !important;
 }
 .smart #cerca_btn{
-	height: 34px !important;
-    line-height: 34px !important;
+	height: 44px !important;
+    line-height: 44px !important;
     vertical-align: top;
 }
 #annGlobal {
@@ -70,6 +71,12 @@ body:not(.smart) #parolaGlobal::-webkit-input-placeholder{
     z-index: 16;
     margin-left: -30px;
 }
+.smart #annGlobal {
+	width: 40px !important;
+	height: 44px !important;
+	margin-left: -39px !important;
+}
+
 .boxMnOp:not(.globalOk) #annGlobal{
     right: var(--menu-width) !important;
     margin-right: -29px;
@@ -147,14 +154,15 @@ body:not(.smart) #globalTitolo{
     margin-left: 3px;
 }
 .smart #globalTitolo{
-	height: 34px !important;
+	height: 44px !important;
     width: calc(100% - 41px) !important;
+	margin-top: 3px;
 }
 body:not(.smart) #globalTesta{
 	height: 35px;
 }
 .smart #globalTesta{
-	height: 39px;
+	height: 49px;
 }
 #schedaGlobal{
 	background-color:#2f2e2b;
@@ -218,7 +226,7 @@ body:not(.smart) #globalTesta{
 	background-color:#2f2e2b;
 }
 .smart #globalCont{
-	height: calc(100% + 2px) !important;
+	height: calc(100% - 8px) !important;
 }
 .risGlob{
     font-size: var(--font-13-2) !important;
