--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -44,7 +44,7 @@ body:not(.smart) #btnCarMapMenu i span,
     text-overflow: ellipsis;
 }
 .smart #btnCarMapMenu > span{
-	width: calc(100% - 70px);
+	width: calc(100% - 157px);
 }
 #quitSet{
 	display: block;
@@ -60,6 +60,9 @@ body:not(.smart) #btnCarMapMenu i span,
 }
 #quitSet:hover{
 	background-image: url(../img/ico_quit5On.png);
+}
+.smart #quitSet{
+	display:none;
 }
 body:not(.smart) #chiudiSet,
 body:not(.smart) #chiudiCliente,
@@ -119,16 +122,16 @@ body:not(.smart) #impostazioniArchivi,
 .smart #elenchi #impostazioniSet,
 .smart #elenchi #impostazioniArchivi{
 	background-size: auto 32px;
-	opacity:0.8;
-	margin-right:3px;
+    opacity: 0.8;
+    margin-right: 7px;
+    margin-top: -1px;
 }
 body:not(.smart) #elenchi #impostazioniArchivi{
-    margin-top: 4px;
-   	margin-right: -16px;
+    margin-top: 9px;
 }
 .smart #elenchi #impostazioniArchivi{
-    margin-top: -2px;
-   	margin-right: 5px !important;
+	margin-top: 8px;
+    margin-right: -6px !important;
 }
 body:not(.smart) #help_set,
 .smart #elenchi #help_set,
@@ -152,6 +155,11 @@ body:not(.smart) #help_set,
 	font-size: var(--font-18-7) !important;
 	font-weight:bold !important;
 	font-style: normal !important;
+}
+.smart .popup_help,
+.smart #help_clienti,
+.smart #help_set{
+	display:none;
 }
 .fumetti_cont #help_set{
     margin-left:3px !important;
@@ -379,6 +387,35 @@ body:not(.smart) #elenchi_linguette{
 	position: relative;
     z-index: 10;
 }
+.smart #mappe_titolo_freccia{
+	display: inline-block;
+    vertical-align: middle;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+    width: auto !important;
+    height: 30px !important;
+    line-height: 20px !important;
+    float: right !important;
+    background-color: rgba(0, 0, 0, 0.4) !important;
+    border-radius: 8px;
+    padding: 0 13px;
+    margin: 10px -4px 0px 0px;
+    padding-right: 24px;
+    background-image: url(../img/frDx.png);
+    background-position: calc(100% + 10px) center;
+    background-size: auto 43px;
+    margin-top: 0px;
+    margin-right: 6px;
+}
+.smart #mappe_titolo_freccia i{
+	color: #FFF;
+    font-style: normal;
+}
+body:not(.smart) #mappe_titolo_freccia{
+	display:none;
+}
 #elenchi_titolo_freccia.btn_altri_archivi{
 	width: auto !important;
     height: 30px !important;
@@ -388,11 +425,14 @@ body:not(.smart) #elenchi_linguette{
     /* background-image: none !important; */
     border-radius: 8px;
     padding: 0 13px;
-    margin: 10px -4px 0px 0px;
+    margin: 10px -4px 0px 2px;
     padding-right: 24px;
     background-image: url(../img/frDx.png);
     background-position: calc(100% + 10px) center;
     background-size: auto 43px;
+}
+.smart #elenchi_titolo_freccia.btn_altri_archivi{
+    margin: 10px -4px 0px 9px !important;
 }
 #elenchi_titolo_freccia:not(.btn_altri_archivi) i{
     display:none;
@@ -402,7 +442,7 @@ body:not(.smart) #elenchi_linguette{
 	font-style:normal;
 }
 #elenchi_titolo_txt{
-	width: calc(100% - 17px);
+	width: calc(100% - 150px);
 	height: 50px;
     line-height: 50px;
 	display:inline-block;
@@ -411,6 +451,7 @@ body:not(.smart) #elenchi_linguette{
     font-size: var(--font-23-1);
     color: rgba(0,0,0,0.6);
 	text-align: left;
+	float: left;
 }
 .smart #elenchi_titolo_txt{
 	font-size: var(--font-28) !important;
@@ -677,8 +718,8 @@ body:not(.bodyStyled2) #chiudiElenco{
     line-height: 45.8px !important;
 }
 .smart:not(.android) .lista > div:not(.loading):not(.menuElenchi){
-	height: 40px;
-    line-height: 40px;
+	/* height: 40px;
+    line-height: 40px; */
 	margin: 5px;
 }
 .app_version.bug_font.smart:not(.android) .lista > div:not(.loading):not(.menuElenchi){
