--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -749,7 +749,7 @@ body:not(.bodyModello) #btns_set{
     margin: 2px;
     cursor: pointer;
     background-color: rgba(255,255,255,0.4);
-	display: inline-block;
+	display: block;
 }
 .smart #meridianiSmart_cont div.elencoSel{
 	width: 55px !important;
