--- a/css/agenda.css
+++ b/css/agenda.css
@@ -23,7 +23,7 @@
 /* agenda aperta */
 .agOp,
 .agOpGen{
-	opacity:1/*  !important */;
+	opacity:1 !important;
 }
 .SCH:not(#agCont) .agOp{
     min-height: 313px !important;
