--- a/css/popup.css
+++ b/css/popup.css
@@ -15,6 +15,17 @@
 	overflow: hidden;
 	z-index:1000001;
 }
+
+.smart .popup{
+	width:100% !important;
+	height:100% !important;
+	max-height:none !important;
+	left:0px !important;
+	top:0px !important;
+	border-radius:0px !important;
+	margin-left:0px !important;
+	margin-top:0px !important;
+}
 @media (max-width: 400px){
 	.popup{
 		width:100% !important;
