--- a/css/popup_features.css
+++ b/css/popup_features.css
@@ -25,7 +25,7 @@
     }
 }
 @media (max-width: 600px){
-	.popup{
+	#features{
 		width:100% !important;
 		height:100% !important;
     	max-height:none !important;
