--- a/css/popup_versione.css
+++ b/css/popup_versione.css
@@ -24,8 +24,12 @@ body #contVersione img{
 	padding-right:30px;
 }
 #contVersione, #contVersione *{
-	font-size: 11px;
+	font-size: 12px;
 	color:rgba(255,255,255,0.5);
+}
+.smart #contVersione,
+.smart #contVersione *{
+	font-size: 15px;
 }
 #logoVersione{
 	display:inline-block;
