--- a/css/menu.css
+++ b/css/menu.css
@@ -426,7 +426,7 @@ body:not(.smart) #p_rifletti{
 }
 .smart #contBtnModello #p_centro{
 	position: fixed;
-    top: 3px;/*119px;*/
+    top: 115px;
     left: 3px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 6px;
