--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -154,7 +154,7 @@ body:not(.smart) #scheda:not(.schLato) .ideogrammaMeridianoChar{
 }
 .smart #contBtnModello > div #p_contrasto{
 	position: fixed;
-    top: 65px;
+    top: 119px;
     left: 3px;
     border-top: none !important;
     /* background-color: rgba(0, 0, 0, 0.3); */
@@ -162,6 +162,7 @@ body:not(.smart) #scheda:not(.schLato) .ideogrammaMeridianoChar{
     background-position: center center;
     height: 48px;
     width: 48px !important;
+	background-color: rgba(0, 0, 0, 0.35)
 }
 #contBtnModello.vis .smart #p_contrasto{
 	left: 10px !important;
