--- a/css/menu.css
+++ b/css/menu.css
@@ -80,6 +80,9 @@ body:not(.smart) #icone.iconeEspanse{
 	height:auto !important;
 	max-height: 40px;
 }
+.smart #btns_set{
+	position: fixed;
+}
 .smart #icone div svg{
 	transform: rotate(-90deg);
     margin-left: 28px !important;
@@ -100,7 +103,7 @@ body:not(.smart) #icone.iconeEspanse{
 	background-position:center center;
 	cursor:pointer;
 }
-.smart #contBtnModello.nas > div:not(#p_centro){
+.smart #contBtnModello.nas > div:not(#p_centro):not(#btns_set):not(#p_contrasto):not(#p_rifletti){
 	display:none !important;
 }
 .bodyStampa #contBtnModello{
@@ -162,11 +165,17 @@ body:not(.smart) #icone.iconeEspanse{
 	border-top: 1px solid rgba(255, 255, 255, 0.2); */
 }
 .smart #p_rifletti{
-	width:36px !important;
+    border-radius: 6px;
+    height: 48px;
+    width: 48px !important;
+
+	/* width:36px !important; */
 	position: fixed;
-	top: 65px;
-	left: 9px;
+	top: 119px;/* 
+	left: 9px; */
+	left: 3px;
 	border-top: none !important;/* 1px solid rgba(255, 255, 255, 0.2); */
+	background-color: rgba(0, 0, 0, 0.35)
 }
 
 .smart #icone:not(.iconeHome) #p_modello,
@@ -426,7 +435,7 @@ body:not(.smart) #p_rifletti{
 }
 .smart #contBtnModello #p_centro{
 	position: fixed;
-    top: 115px;
+    top: 68px;
     left: 3px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 6px;
